Fix image overflow on small devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@
 
         mat-sidenav-content {
             display: block;
-            width: 680px;
+            max-width: 680px;
             margin: 0 auto;
         }
     }
