--- a/src/app/feature/file/file.component.scss
+++ b/src/app/feature/file/file.component.scss
@@ -1,4 +1,9 @@
 :host {
     display: block;
     padding: 16px;
+
+    ::ng-deep img {        
+        max-width: 100%;
+        height: auto;
+    }
 }
